--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,15 +2,16 @@
 # uncomment the urls if you wish to display them, and add your own URL
 
 # jazznotes.io
-- project: jazznotes.io
+- project: National Social Security Strategy
   role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
-  # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+  duration: 2023 &mdash; Present
+  url: http://mnedashboard.online
+  Platform : Laravel 10, MySQL, Nuxt.js, Vue3, PHP 8
+  description: Dashboard to analyze social safety data of various goverment Projects.
 
 # Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
-  # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+- project: Teletalk Bangladesh Ltd
+  role: Founder & Primary Developer
+  duration: 2020 &mdash; 2021
+  url: : http://www.teletalk.com.bd
+  description: This is one of the telecommunication site of Bangladesh from where you can view & purchase data plan.
