change on various experiences

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,12 +6,12 @@
   role: Founder & Primary Developer
   duration: 2023 &mdash; Present
   url: http://mnedashboard.online
-  Platform : Laravel 10, MySQL, Nuxt.js, Vue3, PHP 8
+  Platform: Laravel 10, MySQL, Nuxt.js, Vue3, PHP 8
   description: Dashboard to analyze social safety data of various goverment Projects.
 
 # Springfield Community Outreach Group
 - project: Teletalk Bangladesh Ltd
   role: Founder & Primary Developer
   duration: 2020 &mdash; 2021
-  url: : http://www.teletalk.com.bd
+  url: http://www.teletalk.com.bd
   description: This is one of the telecommunication site of Bangladesh from where you can view & purchase data plan.
