--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -3,7 +3,7 @@
 - skill: PHP, Laravel, CakePHP
 
 # Communications strategy
-- skill: JavaScript, Vue.js, React.js, Nuxt.js, Next.js, jQuery,
+- skill: JavaScript, Vue.js, React.js, Nuxt.js, Next.js, jQuery
   
 
 # Digital content development and creation
