--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,13 +3,11 @@
 - company: SoftBd Ltd
   position: Software Engineer
   duration: Aug, 2020 &mdash; Present
-  summary:	<ul class="resume-item-list"><li>Application architecture development and database design.</li><li>Working with MVC architecture and creating Restful APIs</li><li>Handling client queries & presenting technical issues.
-</li></ul>
+  summary:	<ul class="resume-item-list"><li>Application architecture development and database design.</li><li>Working with MVC architecture and creating Restful APIs</li><li>Handling client queries & presenting technical issues.</li></ul>
 
 # Director of Digital Stratgy
 - company: Xorent IT
   position: Software Engineer
   duration:  Oct, 2018 &mdash; Jul, 2020
- summary: <ul class="resume-item-list"><li>Application architecture development and database design.</li><li>Working with MVC architecture and creating Restful APIs</li><li>Handling client queries & presenting technical issues.
-</li></ul>
+  summary: <ul class="resume-item-list"><li>Application architecture development and database design.</li><li>Working with MVC architecture and creating Restful APIs</li><li>Handling client queries & presenting technical issues.</li></ul>
 
